Make copy-frame utility function smore robust

The code that calls them doesn't check if the source keyframe
actually exists or not.

BUG:466902